# pantheon-framework

./: .pre-commit-config.yaml  MANIFEST.in  PHILOSOPHY.md  README.md  package-lock.json  pyproject.toml
pantheon/: AGENTS.md  CLAUDE.md  __init__.py  artifact_engine.py  artifact_id_manager.py  cli.py  constants.py  filesystem.py  logger.py  markdown_formatter.py  path.py  path_security.py  process_handler.py  rae_engine.py  update_composer.py  workspace.py
pantheon-artifacts/docs/: README.md
pantheon-artifacts/docs/_includes/: plantuml-style.puml
pantheon-artifacts/docs/architecture-guide/: architecture-guide.md  container-view.puml
pantheon-artifacts/docs/cli-interface/: command-audit-logging.puml  command-processing.puml  commands.md  framework-init.puml  project-init.puml  (+2 more)
pantheon/_templates/: AGENTS.md  CLAUDE.md
reference/: retrieval-augmented-execution.md
tests/: __init__.py  conftest.py
tests/e2e/: AGENTS.md  CLAUDE.md  __init__.py  conftest.py  test_artifact_generation.py  test_audit_logging.py  test_build_process.py  test_golden_path.py  test_init_command.py  test_profile_workflow.py  test_retrieval_commands.py  test_ticket_sequence_grouping.py
tests/fixtures/: __init__.py  test_data.py
tests/helpers/: __init__.py  process_input.py
tests/integration/: AGENTS.md  CLAUDE.md  __init__.py  test_cli_logging_integration.py  test_filesystem_integration.py  test_profile_selection_integration.py  test_semantic_uri_template_integration.py  test_team_data_integration.py
tests/unit/: AGENTS.md  CLAUDE.md  __init__.py  test_artifact_engine.py  test_artifact_engine_interface.py  test_artifact_engine_naming.py  test_artifact_engine_sections.py  test_artifact_engine_types.py  test_artifact_id_manager.py  test_audit_logging.py  test_build_locator_converter.py  test_build_modular_section_scaffolding.py  test_build_process.py  test_build_process_modular.py  test_build_process_toggle_pattern.py  test_cli.py  test_cli_agent_installation.py  test_cli_init_ux.py  test_cli_profile_selection.py  test_filesystem.py  test_jsonl_functionality.py  test_logger.py  test_logger_integration.py  test_markdown_formatter.py  test_pantheon_path.py  test_path_security.py  test_process_detection_precedence.py  test_process_handler.py  test_process_handler_acronym.py  test_process_handler_fundamental.py  test_process_handler_implementation.py  test_rae_engine.py  test_semantic_uri_loader.py  test_team_data.py  test_ticket_sequence_grouping.py  test_update_composer.py  test_update_singleton_mode.py  test_workspace.py  test_workspace_artifact_template_uri.py  test_workspace_content_retrieval.py  (+2 more)
(+128 files in other folders)
